# trenbot-enterprise-lab

./: .gitignore  README.md  package-lock.json  package.json
apps/backend/: README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: router.py
apps/backend/app/api/routes/: chat.py
apps/backend/app/core/: config.py  logging.py  messages.py
apps/backend/app/dependencies/: services.py
apps/backend/app/domain/: conversation.py
apps/backend/app/infrastructure/session/: base.py  memory.py
apps/backend/app/schemas/: chat.py
apps/backend/app/services/: chat_service.py  conversation_orchestrator.py  flow_engine.py
apps/backend/tests/: test_chat.py  test_flow_engine.py  test_health.py
apps/backend/trenbot_enterprise_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/frontend/: README.md  package.json  tsconfig.json
apps/frontend/.storybook/: main.ts  preview.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/frontend/src/components/chat/: BotMessage.tsx  ChatInput.module.css  ChatInput.stories.tsx  ChatInput.tsx  ChatWindow.module.css  ChatWindow.stories.tsx  ChatWindow.tsx  EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  MessageBubble.module.css  MessageBubble.stories.tsx  StateCard.module.css  States.stories.tsx  UserMessage.tsx
apps/frontend/src/lib/api/: chat.ts
apps/frontend/src/lib/mocks/: handlers.ts  index.ts
apps/frontend/src/types/: chat.ts
docs/: architecture.md
infra/: README.md
shared/contracts/: README.md  chat.py  chat.ts
